added data enrichment from OpenWeatherMaps

--- a/DataCollector/templates/scale_view.html
+++ b/DataCollector/templates/scale_view.html
@@ -14,6 +14,7 @@
                         {{ latest_measurement.weight }}kg |
                         {{ latest_measurement.temperature }}°C |
                         {{ latest_measurement.humidity }}%rF
+                        {{ latest_measurement.pressure }}hPa
                     </h4>
                     <h6>{{ latest_measurement.timestamp|date:"d.m.Y H:i" }}</h6>
                 </div>
