added some table view

--- a/DataCollector/templates/amplot.html
+++ b/DataCollector/templates/amplot.html
@@ -65,6 +65,7 @@
     <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
 
     <script>
+        $('#nav_graph').addClass("active")
 
         var weight_chart_config = {
             "type": "serial",
