--- a/templates/base.html
+++ b/templates/base.html
@@ -14,14 +14,27 @@
 <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
     <div class="container">
         <a href="../" class="navbar-brand">
-            Roose<small>s</small> Stockwaage
+            Roose
+            <small>s</small>
+            Stockwaage
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse">
-
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'home' %}" id="nav_graph">
+                        Grafik
+                    </a>
+                </li>
+                <li class="nav-item"  id="nav_table">
+                    <a class="nav-link" href="{% url 'table' %}">
+                        Tabelle
+                    </a>
+                </li>
+            </ul>
             <ul class="nav navbar-nav ml-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'home' %}" target="_blank">Start</a>
