minor spelling change

--- a/DataCollector/templates/amplot.html
+++ b/DataCollector/templates/amplot.html
@@ -47,11 +47,11 @@
         </div>
     </div>
     <div class="container">
-    <h4 style="margin-top: 1em;">Weight</h4>
+    <h4 style="margin-top: 1em;">Gewicht</h4>
     <div id="weight_chart" class="amchart"></div>
     <h4>Temperatur</h4>
     <div id="temperature_chart" class="amchart"></div>
-    <h4>LuftFeuchte</h4>
+    <h4>Luftfeuchte</h4>
     <div id="humidity_chart" class="amchart"></div>
     <h4>Luftdruck</h4>
     <div id="preassure_chart" class="amchart"></div>
