--- a/DataCollector/templates/amplot.html
+++ b/DataCollector/templates/amplot.html
@@ -23,7 +23,7 @@
                     <h4>
                         {{ latest_measurement.weight }}kg |
                         {{ latest_measurement.temperature }}°C |
-                        {{ latest_measurement.humidity }}%rF
+                        {{ latest_measurement.humidity }}%rF |
                         {{ latest_measurement.pressure }}hPa
                     </h4>
                     <h6>{{ latest_measurement.timestamp|date:"d.m.Y H:i" }}</h6>
