--- a/DataCollector/templates/amplot.html
+++ b/DataCollector/templates/amplot.html
@@ -105,7 +105,8 @@
                 "graphLineAlpha": 0.2,
                 "graphLineColor": "#c2c2c2",
                 "selectedGraphLineColor": "#888888",
-                "selectedGraphLineAlpha": 1
+                "selectedGraphLineAlpha": 1,
+                "updateOnReleaseOnly": true
             },
             "chartCursor": {
                 "categoryBalloonDateFormat": "YYYY-MM-DD HH:NN",
