removed the "Show all" function.

--- a/DataCollector/templates/amplot.html
+++ b/DataCollector/templates/amplot.html
@@ -69,6 +69,7 @@
 
         var weight_chart_config = {
             "type": "serial",
+            "zoomOutText": '',
             "theme": "light",
             "marginTop": 0,
             "marginRight": 80,
